[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docmost-cli"
version = "0.3.1"
description = "CLI tool for managing Docmost wiki instances"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Georg", email = "georg@mann-mouse.at" },
]
keywords = ["docmost", "wiki", "cli", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12,<1.0",
    "httpx>=0.27,<1.0",
    "rich>=13.0,<15.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "tomli>=2.0,<3.0; python_version < '3.12'",
    "tomli-w>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
docmost-cli = "docmost_cli.cli.main:app"

[project.urls]
Homepage = "https://github.com/glinhard/docmost-cli"
Repository = "https://github.com/glinhard/docmost-cli"
Issues = "https://github.com/glinhard/docmost-cli/issues"
Changelog = "https://github.com/glinhard/docmost-cli/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/docmost_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"src/docmost_cli/cli/*.py" = ["B008"]  # typer uses function calls in defaults
"src/docmost_cli/convert/prosemirror_to_md.py" = ["N802"]  # method names match ProseMirror node types
